--- a/src/Readme
+++ b/src/Readme
@@ -1,3 +1,9 @@
+- Hibernate 面试题大全：
+https://www.imooc.com/article/24159
+
+_____________________________________________
+
+
 1. 在 Hibernate 中使用 C3P0 数据库连接池（数据源）：
 
 1）导入 Jar 包：
